SERVER-6826 fix exception safety in ConnectionString::connect